# Oolong

./: .gitignore  Cargo.toml  README.md
scripts/pyannote/: README.md  diarize_single.py  download_models.py  export_onnx.py  generate_reference.py  precompute_plda.py  preprocess_audio.sh  requirements.txt  test_exports.py  validate_onnx.py
src/: diarizer.rs  lib.rs  types.rs
